# rune

./: .dockerignore  .gitignore  .gitmodules  .rustfmt.toml  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  Runefile.yml  index.html  release.toml  rust-toolchain  rust-toolchain.toml
bindings/native/: BUILD.md  Cargo.toml  README.md  cbindgen.toml  getting_started.md
bindings/native/examples/: .gitignore  Makefile  example.cpp
bindings/native/src/: capability.rs  error.rs  image.rs  input_tensors.rs  lib.rs  macros.rs  metadata.rs  output_tensors.rs  result.rs  runtime.rs  utils.rs  wasm_runtime.rs  wasmer_runtime.rs
bindings/native/tests/: CMakeLists.txt  c_api.rs  c_integration_tests.rs  getting_started.rs  run_cxx_example.rs  rune_test.cpp
bindings/python/: Cargo.toml  README.md  test_python_bindings_proc_blocks.ipynb  tf_training.ipynb
bindings/python/src/: lib.rs
bindings/python/tests/: integration_tests.py  python-unittest.rs
bindings/python/tf_speech_commands/: input_data.py  models.py
codegen/: Cargo.toml
codegen/src/: code.rs  environment.rs  lib.rs  manifest.rs  models.rs  project.rs  rune.rs  rustup.rs
codegen/src/boilerplate/: Cargo.toml.hbs  cargo_config.hbs  config.toml.hbs  lib.rs.hbs
codegen/tests/: smoke_test.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: code.rs  config.rs  environment.rs  files.rs  lib.rs  manifest.rs  models.rs  project.rs  rustup.rs
crates/compiler/: Cargo.toml  README.md  error-codes.md  runefile-schema.json
crates/compiler-2/: Cargo.toml  README.md  runefile-schema.json
crates/compiler-2/src/: config.rs  filesystem.rs  lib.rs  macros.rs  text.rs
crates/compiler/examples/: compile.rs  extensions.rs  json-schema.rs  validate-runefile-schema.rs
crates/compiler/src/: build_context.rs  config.rs  diagnostics.rs  filesystem.rs  hooks.rs  im.rs  inputs.rs  lib.rs  macros.rs  phases.rs  serialize.rs  toolchain.rs
crates/compiler/tests/: existing_runefiles.rs
crates/proc-blocks/: Cargo.toml
crates/proc-blocks/src/: descriptor.rs  lib.rs
crates/proc-blocks/tests/: smoke_test.rs
crates/rune-cli/: Cargo.toml  release.toml
crates/rune-cli/benches/: rune_benchmark.rs
crates/rune-cli/src/: build.rs  graph.rs  inspect.rs  lib.rs  model_info.rs  run.rs  unstable.rs  version.rs
crates/rune-cli/tests/: integration.rs
crates/rune-core/: Cargo.toml
crates/rune-core/src/: element_type.rs  lib.rs  logging.rs  pipelines.rs  pixel_format.rs  reflect.rs  reflection_type_list.rs  resources.rs  shape.rs  tensor.rs  tensor_list.rs  value.rs
crates/runtime/: Cargo.toml
crates/runtime/examples/: zune_example.rs
crates/runtime/src/: callbacks.rs  function.rs  host_functions.rs  lib.rs  outputs.rs  runtime.rs  tensor.rs  wasm3.rs  wasmer.rs  zune.rs
crates/runtime/tests/: runtime_integration.rs  runtime_integration_tests.rs
crates/syntax/: Cargo.toml
crates/syntax/examples/: extensions.rs
crates/syntax/src/: analysis.rs  ast.rs  build_context.rs  diagnostics.rs  hir.rs  hooks.rs  lib.rs  macros.rs  parse.rs  phases.rs  serialize.rs  (+2 more)
crates/wasm3-runtime/: Cargo.toml
crates/wasmer-runtime/: Cargo.toml
crates/xtask/: Cargo.toml
examples/audio_test/: Cargo.toml
examples/bevy_2048/: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
examples/gesture/: Cargo.toml  Runefile  Runefile.yml  app.rune  example_data.csv  example_wing.csv  gesture.rune  hmr  model.tflite  model_quantized.tflite
examples/handwritten-sine/: Cargo.toml  handwritten-sine.rune  lib.rs  sine.rune  sine.tflite
examples/microspeech/: Cargo.toml  Runefile  Runefile.yml  Runefile_2021_05_12  Runefile_2048_up_down_right_left  Runefile_6dim  Runefile_6dim.yml  Runefile_6dim_ver2  Runefile_6dim_ver2.yml  Runefile_6dim_ver2_labelless  Runefile_6dim_ver2_labelless.yml  Runefile_dir  match_microspeech.ipynb  microspeech.rune  model.tflite  model_2021_05_12.tflite  model_2048_up_down_right_left.tflite  model_6dim.tflite  model_6dim_ver2.tflite  tf_training.ipynb
ffi/: Cargo.toml  cbindgen.toml
ffi/examples/: .gitignore  Makefile  main.cpp  rune_sdk.hpp
ffi/src/: callbacks.rs  capability.rs  environment.rs  lib.rs  output.rs
ffi/tests/: integration.rs  run_cxx_example.rs
integration-tests/: Cargo.toml  README.md
integration-tests/compiletest/: Cargo.toml
integration-tests/src/: assertions.rs  compile.rs  lib.rs  loader.rs  run.rs
python/: Cargo.toml  Playground.ipynb  calibrating_audio_models.ipynb  test_python_bindings_proc_blocks.ipynb  tf_training_with_precomputed_spectrograms.ipynb
python/examples/: main.py
python/src/: lib.rs
python/tests/: integration_tests.py  python-unittest.rs
python/tf_speech_commands/: freeze.py  input_data.py
rune/: .gitignore  Cargo.toml
rune/src/: build.rs  build_alt.rs  graph.rs  inspect.rs  main.rs  model_info.rs  run.rs  version.rs
rune/tests/: integration.rs
runefile-parser/: Cargo.toml  README.md
runefile-parser/src/: lib.rs  parser.rs  runefile.pest
runic-types/: Cargo.toml
runic-types/src/: buf_writer.rs  buffer.rs  lib.rs  logging.rs  marshall.rs  pipelines.rs  pixel_format.rs  proc_block.rs  reflect.rs  tensor.rs  value.rs
runtime/: Cargo.toml
runtime/benches/: runtime-comparison.rs
runtime/src/: context.rs  default_env.rs  environment.rs  function.rs  lib.rs  provider.rs  runtime.rs  vm.rs
runtime/tests/: integration_tests.rs
syntax/: Cargo.toml
syntax/src/: analysis.rs  ast.rs  diagnostics.rs  hir.rs  lib.rs  parse.rs  runefile.pest  type_inference.rs  utils.rs  yaml.rs
syntax/tests/: existing_runefiles.rs
web-runtime/: Cargo.toml  README.md  package.json  tsconfig.json
web-runtime/__mocks__/: runes.ts  sine.rune
web-runtime/__tests__/: smoke.ts
web-runtime/fixtures/: .gitignore
web-runtime/src/: Runtime.test.ts  Runtime.ts  external_types.rs  hacks.rs  imports.rs  imports.ts  index.js  index.ts  lib.rs  runtime.rs  types.rs
web-runtime/tests/: .gitignore  index.spec.ts  package.json  tsconfig.json
xtask/: Cargo.toml
xtask/src/: convert.rs  dist.rs  main.rs  model_info.rs
(+20589 files in other folders)
