[workspace]
members = [
    "codegen",
    "ffi",
    "images/*",
    "integration-tests/compiletest",
    "proc_blocks/*",
    "python",
    "rune",
    "runic-types",
    "runtime",
    "syntax",
    "xtask",
    "wasmer-runtime",
]

[patch.crates-io]
serde_yaml = { git = "https://github.com/hotg-ai/serde-yaml", branch = "spans" }
