[workspace]
resolver = "2"
members = [
    "codegen",
    "ffi",
    "images/runicos-base/*",
    "integration-tests",
    "proc_blocks/*",
    "python",
    "rune",
    "runic-types",
    "runtime",
    "syntax",
    "xtask",
    "wasmer-runtime",
]

[patch.crates-io]
serde_yaml = { git = "https://github.com/hotg-ai/serde-yaml", branch = "spans" }
