[package]
name = "rune-codegen"
version = "0.1.0"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
description = "Code generation for compiling a Runefile to WebAssembly."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
cargo_toml = "0.9.1"
handlebars = "3.5.2"
heck = "0.3.2"
log = "0.4.14"
once_cell = "1.7.2"
quote = "1.0"
rune-syntax = { path = "../syntax" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.8"

[dev-dependencies]
tempfile = "3.2.0"
toml = "0.5.8"
