[package]
name = "rune-ffi"
version = "0.1.0"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
env_logger = "0.8.3"
libc = "0.2.87"
rune-runtime = { path = "../runtime" }
runic-types = { path = "../runic-types" }

[lib]
crate-type = ["cdylib", "staticlib"]
