[package]
name = "rune-ffi"
version = "0.1.0"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
env_logger = "0.8.3"
libc = "0.2.87"
log = "0.4.14"
rune-codegen = { path = "../codegen" }
rune-runtime = { path = "../runtime" }
rune-wasmer-runtime = { path = "../wasmer-runtime" }
rune-syntax = { path = "../syntax" }
runic-types = { path = "../runic-types" }
runicos-base = { path = "../images/runicos-base" }

[lib]
name = "rune"
crate-type = ["cdylib", "staticlib", "rlib"]

[dev-dependencies]
cbindgen = "0.18.0"
tempfile = "3.2.0"
