[package]
name = "rune-integration-tests"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
env_logger = "0.8.3"
log = "0.4.14"
once_cell = "1.7.2"
structopt = "0.3.21"
walkdir = "2.3.2"
