[package]
name = "hotg-rune-integration-tests"
version = "0.0.0"
edition = "2018"
publish = false

[[bin]]
name = "integration-tests"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
env_logger = "0.9.0"
log = "0.4.14"
once_cell = "1.9.0"
regex = "1.5.4"
structopt = "0.3.25"
walkdir = "2.3.2"

[package.metadata.release]
release = false
