[package]
name = "rune"
version = "0.2.0"
authors = ["Kartik Thakore <kartik@thakore.ai>", "Akshay Sharma <akshay@sharma.ai>"]
edition = "2018"
license = "Apache 2.0"
keywords = ["tinyml", "container"]


[dependencies]
anyhow = "1.0.38"
clap = "2.33.3"
codespan-reporting = "0.11.0"
dirs = "3.0.1"
env_logger = "0.8.1"
log = "0.4.11"
rune-codegen = { path = "../codegen" }
rune-runtime = { path = "../runtime" }
rune-syntax = { path = "../syntax" }
runic-types = { path = "../runic-types" }

[dev-dependencies]
assert_cmd = "1.0.3"
predicates = "1.0.7"
