[package]
name = "rune"
version = "0.2.0"
authors = ["Kartik Thakore <kartik@thakore.ai>", "Akshay Sharma <akshay@sharma.ai>", "Michael-F-Bryan <consulting@michaelfbryan.com>"]
edition = "2018"
license = "Apache 2.0"
keywords = ["tinyml", "container"]
description = "A self-sufficient runtime for TinyML Containers"

[dependencies]
anyhow = "1.0.38"
clap = "2.33.3"
codespan-reporting = "0.11.0"
dirs = "3.0.1"
env_logger = "0.8.1"
hound = "3.4.0"
image = "0.23.14"
log = { version = "0.4.11", features = ["max_level_trace"] }
once_cell = "1.7.0"
rune-codegen = { path = "../codegen" }
rune-runtime = { path = "../runtime" }
rune-syntax = { path = "../syntax" }
runic-types = { path = "../runic-types" }
structopt = "0.3.21"

[dev-dependencies]
assert_cmd = "1.0.3"
predicates = "1.0.7"
tempfile = "3.2.0"
