[package]
name = "rune"
version = "0.2.1"
authors = ["Kartik Thakore <kartik@thakore.ai>", "Akshay Sharma <akshay@sharma.ai>", "Michael-F-Bryan <consulting@michaelfbryan.com>"]
edition = "2018"
license = "Apache 2.0"
keywords = ["tinyml", "container"]
description = "A self-sufficient runtime for TinyML Containers"

[dependencies]
anyhow = "1.0.38"
clap = "2.33.3"
codespan-reporting = "0.11.0"
dirs = "3.0.1"
env_logger = "0.8.1"
hound = "3.4.0"
image = "0.23.14"
log = { version = "0.4.11" }
once_cell = "1.7.0"
petgraph = "0.5.1"
rune-codegen = { path = "../codegen" }
rune-syntax = { path = "../syntax", features = ["serde-1"] }
runic-types = { path = "../runic-types" }
serde_json = "1.0.64"
structopt = "0.3.21"
rune-wasmer-runtime2 = { path = "../wasmer-runtime2" }
rune-runtime = { path = "../runtime" }
runicos-base = { path = "../images/runicos-base" }
rand = "0.8.3"

[dev-dependencies]
assert_cmd = "1.0.3"
predicates = "1.0.7"
tempfile = "3.2.0"
