[package]
name = "runefile-parser"
version = "0.1.0"
authors = ["Kartik Thakore <kartik@thakore.ai>"]
edition = "2018"
license = "Apache 2.0"
keywords = ["parser", "runefile", "pest"]

[dependencies]
pest = "2.1"
pest_derive = "2.1"
handlebars = "3.5.0"
codegen = "0.1.3"
cargo = "0.51.0"
uuid = { version = "0.8.1", features = ["serde", "v4"]}
runic-types = { path = "../runic-types" }
log = "0.4.11"

[dev-dependencies]
runic-pb-fft = { git = "ssh://git@github.com/hotg-ai/runic-pb-fft" }

[lib]
name = "runefile_parser"
path = "src/lib.rs"
