[package]
name = "runic-types"
version = "0.1.0"
authors = ["Kartik Thakore <kartik@thakore.ai>"]
description = "Runic Types Protobuf"
edition = "2018"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
log = { version = "0.4.14", default-features = false, features = ["serde", "max_level_trace"] }

serde-json-core = { version = "0.2.0", optional = true }
dlmalloc = { version = "0.2.1", optional = true, features = ["global"] }

[features]
default = []
rune-runtime-support = ["serde-json-core", "dlmalloc"]
