[package]
name = "runic-types"
version = "0.1.0"
authors = ["Kartik Thakore <kartik@thakore.ai>", "Michael-F-Bryan <michael@hotg.ai>"]
description = "Runic Types Protobuf"
edition = "2018"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
log = { version = "0.4.14", default-features = false, features = ["serde", "max_level_trace"] }

[target.wasm32-unknown-unknown.dependencies]
serde-json-core = "0.4.0"
dlmalloc = { version = "0.2.1", features = ["global"] }

[features]
default = []
std = []
