[package]
name = "rune-syntax"
version = "0.1.0"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
description = "Runefile parsing and analysis."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan = "0.11.0"
codespan-reporting = "0.11.0"
pest = "2.1.3"
pest_derive = "2.1.0"

[dev-dependencies]
pretty_assertions = "0.7.0"
