[package]
name = "rune-syntax"
version = "0.1.0"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
description = "Runefile parsing and analysis."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan = { version = "0.11.0", features = ["serialization"] }
codespan-reporting = "0.11.0"
pest = "2.1.3"
pest_derive = "2.1.0"
petgraph = { version = "0.5.1", features = ["serde-1"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_yaml = "0.8.17"

[dev-dependencies]
pretty_assertions = "0.7.0"
