[package]
name = "web-runtime"
version = "0.1.0"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6" }
dlmalloc = { version = "0.2.1", features = ["global"] }
js-sys = "0.3.50"
rune-runtime = { path = "../runtime" }
runicos-base = { path = "../images/runicos-base", default-features = false }
getrandom = { version = "0.2.2", features = ["js"] }
wasm-bindgen-futures = "0.4.23"
anyhow = "1.0.40"
runic-types = { path = "../runic-types" }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
