[package]
name = "hotg-rune-native"
version = "0.0.0"
edition = "2018"
publish = false
authors = ["The Rune Developers <developers@hotg.ai>"]
license = "MIT OR Apache 2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
anyhow = "1.0"
build-info = "0.0.24"
log = "0.4.14"
paste = "1.0"
hotg-rune-core = { path = "../../crates/rune-core", version = "^0.11.0"}
hotg-rune-runtime = { path = "../../crates/runtime", version = "^0.11.0"}
hotg-runicos-base-runtime = { path = "../../images/runicos-base/runtime", version = "^0.11.0", default-features = false }
safer-ffi = { version = "0.0.6", features = ["proc_macros"] }

[build-dependencies]
build-info-build = "0.0.24"

[features]
c-headers = ["safer-ffi/headers"]
wasmer-runtime = ["hotg-runicos-base-runtime/wasmer"]
wasm3-runtime = ["hotg-runicos-base-runtime/wasm3"]

[package.metadata.release]
release = false
