[package]
name = "rune-native"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[[test]]
name = "c_integration_tests"
path = "tests/c_integration_tests.rs"
harness = false

[dependencies]
anyhow = "1.0.55"
cfg-if = "1.0.0"
hotg-rune-runtime = { version = "0.11.3", path = "../../crates/runtime" }

[dev-dependencies]
cmake = "0.1.48"
once_cell = "1.10.0"

[features]
default = ["wasm3"]
wasm3 = ["hotg-rune-runtime/wasm3"]
wasmer = ["hotg-rune-runtime/wasmer"]
