[package]
name = "rune-native"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[[test]]
name = "getting_started"
path = "tests/getting_started.rs"
harness = false

[dependencies]
anyhow = "1.0.55"
cfg-if = "1.0.0"
hotg-rune-runtime = { version = "0.11.3", path = "../../crates/runtime", default-features = false }

[dev-dependencies]
cbindgen = "0.20.0"
cmake = "0.1.48"
libc = "0.2.119"
once_cell = "1.10.0"
pulldown-cmark = "0.9.1"
tracing = { version = "0.1.31", features = ["tracing-attributes"] }
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }

[features]
default = ["wasm3", "tflite"]
wasm3 = ["hotg-rune-runtime/wasm3"]
wasmer = ["hotg-rune-runtime/wasmer"]
tflite = ["hotg-rune-runtime/tflite"]
