[package]
name = "rune_py"
version = "0.8.0"
authors = ["The Rune Developers <developers@hotg.ai>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
test = false
doctest = false
bench = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
numpy = "0.14"
pyo3 = { version = "0.14", features = ["extension-module", "abi3", "abi3-py36", "multiple-pymethods"] }

[[test]]
name = "python-unittest"
path = "tests/python-unittest.rs"
harness = false

[package.metadata.maturin]
requires-dist = ["numpy~=1.15"]
