[package]
name = "rune_py"
version = "0.8.0"
authors = ["The Rune Developers <developers@hotg.ai>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
test = false
doctest = false
bench = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fft = { path = "../../proc-blocks/fft", version = "^0.8.0"}
hotg-rune-core = { path = "../../crates/rune-core", version = "^0.8.2-dev"}
hotg-rune-proc-blocks = { path = "../../proc-blocks/proc-blocks", version = "^0.8.2-dev"}
image-normalization = { path = "../../proc-blocks/image-normalization", version = "^0.8.0"}
noise-filtering = { path = "../../proc-blocks/noise-filtering", version = "^0.8.0"}
normalize = { path = "../../proc-blocks/normalize", version = "^0.8.0"}
numpy = "0.14"
paste = "1.0"
pyo3 = { version = "0.14", features = ["extension-module", "abi3", "abi3-py36", "multiple-pymethods"] }

[[test]]
name = "python-unittest"
path = "tests/python-unittest.rs"
harness = false

[package.metadata.maturin]
requires-dist = ["numpy~=1.15"]
