[package]
name = "hotg-rune-codegen"
version = "0.6.1-dev"
authors = ["The Rune Developers <developers@hotg.ai>"]
edition = "2018"
description = "Code generation for compiling a Runefile to WebAssembly."
license = "MIT OR Apache-2.0"
homepage = "https://hotg.dev/"
repository = "https://github.com/hotg-ai/rune"
categories = ["science"]
keywords = ["rune", "tinyml", "container", "machine", "learning"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
build-info = { version = "0.0.24", features = ["serde"] }
cargo_toml = "0.10"
heck = "0.3.2"
log = "0.4.14"
proc-macro2 = "1.0.27"
quote = "1.0"
hotg-rune-core = { path = "../rune-core", version = "^0.6.1-dev"}
hotg-rune-syntax = { path = "../syntax", version = "^0.6.1-dev"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.8"

[dev-dependencies]
pretty_assertions = "0.7.2"
tempfile = "3.2.0"
toml = "0.5.8"
