[package]
name = "hotg-rune-compiler-2"
version = "0.0.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = { version = "15.0.0", features = ["serde"] }
indexmap = { version = "1.8.1", features = ["serde-1"] }
miette = "4.5.0"
once_cell = "1.10.0"
regex = "1.5.5"
salsa = "0.16.1"
schemars = { version = "0.8.8", features = ["indexmap"] }
serde = "1.0.136"
serde_json = "1.0.79"
serde_yaml = "0.8.23"
thiserror = "1.0.30"
tracing = "0.1.34"

[dev-dependencies]
insta = "1.14.0"
jsonschema = "0.15.2"
pretty_assertions = "1.2.1"
