[package]
name = "hotg-rune-compiler"
version = "0.8.0"
authors = ["The Rune Developers <developers@hotg.ai>"]
edition = "2018"
description = "Runefile parsing and analysis."
license = "MIT OR Apache-2.0"
homepage = "https://hotg.dev/"
repository = "https://github.com/hotg-ai/rune"
categories = ["science", "parser-implementations"]
keywords = ["rune", "tinyml", "container", "machine", "learning"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_refcell = "0.1.7"
cargo_toml = "0.10.0"
codespan = { version = "0.11.0", features = ["serialization"] }
codespan-reporting = "0.11.0"
heck = "0.3.3"
hotg-rune-core = { path = "../rune-core", version = "^0.8.0"}
indexmap = { version = "1.6.2", features = ["serde-1"] }
legion = { version = "0.4.0", default-features = false, features = ["serialize", "codegen", "extended-tuple-impls"] }
log = "0.4.14"
once_cell = "1.7.2"
proc-macro2 = "1.0.29"
quote = "1.0.9"
regex = "1.5.4"
schemars = { version = "0.8.6", features = ["indexmap"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8.17"
toml = "0.5.8"

[dev-dependencies]
env_logger = "0.9.0"
jsonschema = { version = "0.12.1", default-features = false }
pretty_assertions = "0.7.0"
