[package]
name = "hotg-rune-compiler"
version = "0.11.2"
authors = ["The Rune Developers <developers@hotg.ai>"]
edition = "2018"
description = "Runefile parsing and analysis."
license = "MIT OR Apache-2.0"
homepage = "https://hotg.dev/"
repository = "https://github.com/hotg-ai/rune"
categories = ["science", "parser-implementations"]
keywords = ["rune", "tinyml", "container", "machine", "learning"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_refcell = "0.1.8"
cargo_toml = "0.10.3"
codespan = { version = "0.11.1", features = ["serialization"] }
codespan-reporting = "0.11.1"
heck = "0.4.0"
hotg-rune-core = { path = "../rune-core", version = "^0.11.0"}
hotg-rune-proc-blocks = { path = "../proc-blocks", version = "^0.11.0", default-features = false }
indexmap = { version = "1.8.0", features = ["serde-1"] }
indoc = "1.0.3"
legion = { version = "0.4.0", default-features = false, features = ["serialize", "codegen", "extended-tuple-impls"] }
log = "0.4.14"
once_cell = "1.9.0"
proc-macro2 = "1.0.36"
quote = "1.0.14"
regex = "1.5.4"
schemars = { version = "0.8.8", features = ["indexmap"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
serde_yaml = "0.8.23"
toml = "0.5.8"
zip = "0.5.13"

[dev-dependencies]
env_logger = "0.9.0"
jsonschema = { version = "0.13.3", default-features = false }
pretty_assertions = "1.0.0"
