[package]
name = "hotg-rune-compiler"
version = "0.11.3"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = { version = "0.10.0", features = ["reqwest-blocking"], optional = true }
indexmap = { version = "1.8.1", features = ["serde-1"] }
once_cell = "1.10.0"
queryst = { version = "2.1.0" }
regex = "1.5.5"
reqwest = { version = "0.11.10", features = ["blocking"], optional = true }
salsa = "0.16.1"
schemars = { version = "0.8.8", features = ["indexmap"] }
serde = "1.0.136"
serde_json = "1.0.79"
serde_yaml = "0.8.23"
thiserror = "1.0.30"
tracing = "0.1.34"
uriparse = "0.6.4"
zip = "0.6.2"

[dev-dependencies]
insta = "1.14.0"
jsonschema = "0.15.2"
pretty_assertions = "1.2.1"
reqwest = "0.11.10"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tracing-test = "0.2.1"

[features]
default = ["builtins"]
builtins = ["reqwest", "graphql_client"]
