[package]
name = "hotg-rune-proc-blocks"
version = "0.9.3"
edition = "2018"
authors = ["The Rune Developers <developers@hotg.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://hotg.dev/"
repository = "https://github.com/hotg-ai/rune"
categories = ["no-std", "science", "wasm"]
keywords = ["rune", "proc-block", "tensorflow"]
description = "Core tools and abstractions for developing proc blocks in Rune"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
new-hotg-rune-proc-blocks = { version = "^0.10.0", package = "hotg-rune-proc-blocks" }
# hotg-rune-proc-block-macros = { path = "../proc-block-macros", version = "^0.9.2", optional = true }
# hotg-rune-core = { path = "../rune-core", version = "^0.9.2", default-features = false }
# serde = { version = "1.0.126", default-features = false, features = ["derive", "alloc"] }

[dev-dependencies]
difference = "2.0.0"
pretty_assertions = "1"

[features]
default = ["derive"]
derive = ["new-hotg-rune-proc-blocks/derive"]
