[package]
name = "hotg-rune-cli"
version = "0.9.3-dev"
edition = "2018"
authors = ["The Rune Developers <developers@hotg.ai>"]
description = "A self-sufficient runtime for TinyML Containers."
license = "MIT OR Apache-2.0"
homepage = "https://hotg.dev/"
repository = "https://github.com/hotg-ai/rune"
categories = ["science", "wasm", "command-line-utilities"]
keywords = ["rune", "tinyml", "container", "machine", "learning"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
build-info = { version = "0.0.24", features = ["serde"] }
chrono = { version = "0.4.19", features = ["std"] }
codespan-reporting = "0.11.0"
dirs = "4"
env_logger = "0.9"
hotg-rune-core = { path = "../rune-core", version = "^0.9.3-dev"}
hotg-rune-runtime = { path = "../runtime", version = "^0.9.3-dev"}
hotg-rune-compiler = { path = "../compiler", version = "^0.9.3-dev"}
hotg-rune-wasm3-runtime = { path = "../wasm3-runtime", version = "^0.9.3-dev"}
hotg-rune-wasmer-runtime = { path = "../wasmer-runtime", version = "^0.9.3-dev"}
hotg-runecoral = "0.3.4"
hotg-runicos-base-runtime = { path = "../../images/runicos-base/runtime", version = "^0.9.3-dev", features = ["wasm3-runtime"] }
hound = "3.4.0"
human-panic = "1.0.3"
image = "0.23.14"
indexmap = "1.6.2"
log = "0.4.11"
once_cell = "1.7.0"
rand = "0.8.3"
regex = "1.5.4"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.21"
strum = { version = "0.21.0", features = ["derive"] }
wasmparser = "0.80"
dotenv = "0.15.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
tempfile = "3"
walkdir = "2"
criterion = "0.3"
tempdir = "0.3"

[build-dependencies]
build-info-build = "0.0.24"

[[bench]]
name = "rune_benchmark"
harness = false
