[package]
name = "hotg-rune-cli"
version = "0.11.3"
edition = "2018"
authors = ["The Rune Developers <developers@hotg.ai>"]
description = "A self-sufficient runtime for TinyML Containers."
license = "MIT OR Apache-2.0"
homepage = "https://hotg.dev/"
repository = "https://github.com/hotg-ai/rune"
categories = ["science", "wasm", "command-line-utilities"]
keywords = ["rune", "tinyml", "container", "machine", "learning"]
readme = "README.md"

[[bin]]
name = "rune"
doc = false
path = "src/bin/rune.rs"

[dependencies]
anyhow = "1.0"
build-info = { version = "0.0.24", features = ["serde"] }
chrono = { version = "0.4.19", features = ["std"] }
codespan-reporting = "0.11.0"
dirs = "4"
dotenv = "0.15.0"
hotg-rune-compiler = "^0.11.0"
hotg-rune-core = "^0.11.0"
hotg-rune-proc-blocks = { version = "0.11.3", path = "../proc-blocks" }
hotg-rune-runtime = { path = "../runtime", version = "^0.11.0", features = ["builtins", "wasm3", "wasmer", "zune"] }
hotg-runecoral = "0.3.11"
hound = "3.4.0"
human-panic = "1.0.3"
image = "0.23.14"
indexmap = "1.6.2"
once_cell = "1.7.0"
query_based_compiler = { version = "0.11.3", path = "../compiler", package = "hotg-rune-compiler" }
queryst = "2.1.0"
rand = "0.8.3"
regex = "1.5.4"
reqwest = { version = "0.11.10", features = ["blocking"] }
salsa = "0.16.1"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.21"
strum = { version = "0.22.0", features = ["derive"] }
tracing = { version = "0.1.34", features = ["log"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
uriparse = "0.6.4"
wasmparser = "0.81"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
tempfile = "3"
walkdir = "2"
criterion = "0.3"
tempdir = "0.3"

[build-dependencies]
build-info-build = "0.0.24"

[[bench]]
name = "rune_benchmark"
harness = false
