[package]
name = "hotg-rune-core"
version = "0.9.3"
description = "Core abstractions and types used across the Rune platform."
edition = "2018"
authors = ["The Rune Developers <developers@hotg.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://hotg.dev/"
repository = "https://github.com/hotg-ai/rune"
categories = ["no-std", "science", "wasm"]
keywords = ["rune", "tinyml", "container", "machine", "learning"]
readme = "README.md"

[dependencies]
new-hotg-rune-core = { version = "^0.10.0", package = "hotg-rune-core" }

[features]
default = []
std = ["new-hotg-rune-core/std"]
