[package]
name = "hotg-rune-runtime"
version = "0.11.3"
edition = "2018"
authors = ["The Rune Developers <developers@hotg.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://hotg.dev/"
repository = "https://github.com/hotg-ai/rune"
categories = ["science", "wasm"]
keywords = ["rune", "runtime", "tinyml", "machine", "learning"]
description = "Common abstractions and utilities used by Rune runtimes."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
csv = { version = "1.1.6", optional = true }
hotg-rune-core = { path = "../rune-core", version = "^0.11.0", features = ["std"]  }
hotg-runecoral = { version = "0.3.11", optional = true }
hound = { version = "3.4.0", optional = true }
image = { version = "0.23.14", optional = true }
log = "0.4.14"
rand = { version = "0.8.3", optional = true }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79" }
thiserror = "1.0.30"
wasm3 = { git = "https://github.com/wasm3/wasm3-rs", optional = true }
wasmer = { version = "2.2.0-rc2", optional = true }
wasmparser = "0.83.0"

[features]
default = ["builtins", "tflite"]
builtins = ["hound", "image", "rand", "rand/small_rng", "csv"]
tflite = ["hotg-runecoral"]
# Enable rustdoc's "This is supported on crate feature XXX only" annotations
# (requires nightly)
unstable_doc_cfg = []

[dev-dependencies]
tempfile = "3.2.0"

[package.metadata.docs.rs]
all-features = true
